--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.11.1",
     "morgan": "~1.5.1",
     "pg": "latest",
-    "pg-hstore": "^latest",
+    "pg-hstore": "latest",
     "sequelize": "^2.0.0-rc8",
     "sequelize-cli": "^1.2.0",
     "serve-favicon": "~2.2.0"
