--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "sequelize": "^2.0.0-rc8",
     "sequelize-cli": "^1.2.0",
     "serve-favicon": "~2.2.0"
-  }//,
-  //"optionalDependencies": {
-  //  "sqlite3": "latest"
-  //}
+  },
+  "optionalDependencies": {
+    "sqlite3": "latest"
+  }
 }
