--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "pg-hstore": "latest",
     "sequelize": "^2.0.0-rc8",
     "sequelize-cli": "^1.2.0",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "basic-auth": "latest",
+    "express-session": "latest",
+    "passport": "latest",
+    "passport-http": "latest",
+    "passport-local": "latest",
+    "connect-ensure-login": "latest"
   },
   "optionalDependencies": {
     "sqlite3": "latest"
